<resources>
    <string name="app_name">AlarmReminder</string>
    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">AlarmReminder</string>




    <!--<string name="app_name">Smart Study Planner</string>-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Log Out</string>

    <string name="menu_Courses">Courses</string>
    <string name="menu_Assignments">Assignments</string>
    <string name="menu_Quizzes">Quizzes</string>
    <string name="menu_Exams">Exams</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_Todays_plan">Todays Plan</string>
    <string name="menu_Disscusion_group">Disscusion group</string>
    <string name="menu_Setting">Setting</string>
    <string name="menu_Exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="no_cardetails">no_cradetails</string>-->


    <string name="open">open</string>
    <string name="close">close</string>
    <!--<string name="add_reminder">add_reminder</string>-->
    <!--<string name="details">details</string>-->
    <!--<string name="date">date</string>-->
    <!--<string name="time">time</string>-->
    <!---->

</resources>
